fix demo compiler errors

--- a/demo/src/demos/busy-indicator/demo.component.html
+++ b/demo/src/demos/busy-indicator/demo.component.html
@@ -9,11 +9,11 @@
 <br><br>
 
 <h3>Horizontal busy indicators:</h3>
-<vcl-busy-indicator [layout]="horizontal">
+<vcl-busy-indicator [layout]="'horizontal'">
   Loading...
 </vcl-busy-indicator>
 <br><br>
-<vcl-busy-indicator [layout]="horizontal" type="straight">
+<vcl-busy-indicator [layout]="'horizontal'" type="straight">
   Loading...
 </vcl-busy-indicator>
 <br><br>
