--- a/demo/src/demos/navigation/demo.component.html
+++ b/demo/src/demos/navigation/demo.component.html
@@ -4,7 +4,7 @@
   <vcl-navitem label="Home" prepIcon="fa:home" [route]="['/']"></vcl-navitem>
   <vcl-navitem label="Products" prepIcon="fa:bicycle" [route]="['/products']"></vcl-navitem>
   <vcl-navitem label="Contact" prepIcon="fa:envelope" [route]="['/contact']"></vcl-navitem>
-</vcl-navigation>
+</nav>
 <br>
 
 <button vcl-button (click)="nav1.selectRoute(['/products'], true)" label="Select Products"></button>
