--- a/demo/src/demos/embedded-input-group/demo.component.html
+++ b/demo/src/demos/embedded-input-group/demo.component.html
@@ -1,11 +1,11 @@
 
 Icon left and placeholder text
-<vcl-embedded-input-group prependIcon="fa:search">
+<vcl-embedded-input-group prepIcon="fa:search">
   <input vcl-input vcl-embedded-input type="text" placeholder="placeholder text" />
 </vcl-embedded-input-group>
 
 Button left
-<vcl-embedded-input-group prependButtonIcon="fa:search" (prependButtonTap)="someAction($event)">
+<vcl-embedded-input-group prepButtonIcon="fa:search" (prepButtonTap)="someAction($event)">
   <input vcl-input vcl-embedded-input vclPrepItem="true" type="text" />
 </vcl-embedded-input-group>
 
@@ -15,19 +15,19 @@ Placeholder text and icon on the right
 </vcl-embedded-input-group>
 
 Button on the right
-<vcl-embedded-input-group appendButtonIcon="fa:search" (appendButtonTap)="someAction($event)">
+<vcl-embedded-input-group appButtonIcon="fa:search" (appButtonTap)="someAction($event)">
   <input vcl-input vcl-embedded-input type="text" />
 </vcl-embedded-input-group>
 
 Left icon and button on the right
-<vcl-embedded-input-group prependIcon="fa:cog" appendButtonIcon="fa:times-circle"
-  (appendButtonTap)="someAction($event)">
+<vcl-embedded-input-group prepIcon="fa:cog" appButtonIcon="fa:times-circle"
+  (appButtonTap)="someAction($event)">
   <input vcl-input vcl-embedded-input type="text" />
 </vcl-embedded-input-group>
 
 Combined with Input-group
 <div class="vclInputGroup">
-  <vcl-embedded-input-group appendButtonIcon="fa:search" (appendButtonTap)="someAction($event)" prependIcon="fa:cog">
+  <vcl-embedded-input-group appButtonIcon="fa:search" (appButtonTap)="someAction($event)" prepIcon="fa:cog">
     <input vcl-input vcl-embedded-input type="text" />
   </vcl-embedded-input-group>
   <div class="vclInputGroupButton">
