metalist/dropdown/select: Bugfix + remove selectionMode

--- a/src/ng-vcl/dropdown/dropdown.component.html
+++ b/src/ng-vcl/dropdown/dropdown.component.html
@@ -1,6 +1,6 @@
 <ul vcl-metalist #metalist
   [class.vclLayoutHidden]="state === DropdownState.Closed" 
-  [selectionMode]="selectionMode"
+  [mode]="mode"
   [maxSelectableItems]="maxSelectableItems"
   class="vclDropdown vclOpen"
   role="listbox"
