--- a/src/ng-vcl/select/select.component.html
+++ b/src/ng-vcl/select/select.component.html
@@ -28,7 +28,7 @@
       tabindex="-1"
       [disabled]="disabled"
       [expanded]="expanded"
-      [selectionMode]="selectionMode"
+      [mode]="mode"
       [maxSelectableItems]="maxSelectableItems"
       [style.position]="'relative'"
       [style.top.px]="dropdownTop"
