--- a/src/jss-form/jss-form-object.component.html
+++ b/src/jss-form/jss-form-object.component.html
@@ -26,11 +26,16 @@
         <label vcl-form-control-label [label]="fo.label" [required]="fo.required" [for]="fo.id"></label>
 
         <vcl-input-control-group [type]="'error'" [label]="errorLabel">
-          <vcl-password-input [id]="fo.id"
-          [visibleIcon]="fo.schema.visibleIcon || ' fa fa-eye '"
-          [invisibleIcon]="fo.schema.invisibleIcon || ' fa fa-eye-slash '"
-          [formControlName]="fo.key"
-          [placeholder]="fo.placeholder"></vcl-password-input>
+          <vcl-password-input
+            [visibleIcon]="fo.schema.visibleIcon || ' fa fa-eye '"
+            [invisibleIcon]="fo.schema.invisibleIcon || ' fa fa-eye-slash '"
+          >
+            <input vcl-input
+              [id]="fo.id"
+              [class.vclError]="hasError"
+              [placeholder]="fo.placeholder"
+              [formControlName]="fo.key" />
+          </vcl-password-input>
         </vcl-input-control-group>
       </ng-container>
 
