--- a/src/ng-vcl/password-input/password-input.component.html
+++ b/src/ng-vcl/password-input/password-input.component.html
@@ -1,17 +1,7 @@
-<input 
-  vcl-input
-  [attr.id]="inputId"
-  [attr.type]="visible ? 'text' : 'password'"
-  [disabled]="disabled"
-  [tabindex]="tabindex"
-  [selectOnFocus]="selectOnFocus"
-  [placeholder]="placeholder"
-  [ngModel]="value"
-  (ngModelChange)="onModelChange($event)"
-  (blur)="onBlur()">
-  <button vcl-button
-          [prepIcon]="buttonIcon" 
-          [disabled]="disabled"
-          class="vclSquare" 
-          (tap)="toggle()">
-  </button>
+<ng-content></ng-content>
+<button vcl-button
+        [prepIcon]="buttonIcon" 
+        [disabled]="disabled"
+        class="vclSquare" 
+        (tap)="toggle()">
+</button>
