--- a/demo/src/demos/metalist/demo.component.html
+++ b/demo/src/demos/metalist/demo.component.html
@@ -1,51 +1,53 @@
 <h3>single-select:</h3>
-<vcl-metalist #metalist (change)="onChange($event)">
-  <vcl-metalist-item #meta *ngFor="let item of items" [value]="item.value" [selected]="item.selected">
+<div vcl-metalist #metalist [value]="2" (change)="onChange($event)">
+  <div vcl-metalist-item #meta=meta *ngFor="let item of items" [value]="item.value">
     <div>
       <button vcl-button (tap)="metalist.select(meta)">Select</button>
       Some HTML // {{item.name}}
       <span *ngIf="meta.selected"> // selected</span>
       <span *ngIf="meta.marked"> // marked</span>
     </div>
-  </vcl-metalist-item>
-</vcl-metalist>
+  </div>
+  <br>
+  <button vcl-button (tap)="metalist.markPrev()">&lt;</button> Move marker <button vcl-button (tap)="metalist.markNext()">&gt;</button> - <button vcl-button (tap)="metalist.select()">Select</button>
+</div>
 
 <br/>
 <h3>multi-select:</h3>
-<vcl-metalist #metalist2 mode="multiple" (change)="onChange($event)" [maxSelectableItems]="3">
-  <vcl-metalist-item #meta *ngFor="let item of items" [value]="item.value" [selected]="item.selected">
+<div vcl-metalist #metalist2 mode="multiple" [value]="[2, 3]"  (change)="onChange($event)" [maxSelectableItems]="3">
+  <div vcl-metalist-item #meta=meta *ngFor="let item of items" [value]="item.value">
     <div>
       <button vcl-button (tap)="metalist2.select(meta)">Select</button>
       Some HTML // {{item.name}}
       <span *ngIf="meta.selected"> // selected</span>
       <span *ngIf="meta.marked"> // marked</span>
     </div>
-  </vcl-metalist-item>
-</vcl-metalist>
+  </div>
+</div>
 
 <h3>single-select with ngModel:</h3>
-<vcl-metalist #metalist3 [(ngModel)]="value1">
-  <vcl-metalist-item #meta *ngFor="let item of items" [value]="item.value" [selected]="item.selected">
+<div vcl-metalist #metalist3 [(ngModel)]="value1">
+  <div vcl-metalist-item #meta=meta *ngFor="let item of items" [value]="item.value">
     <div>
       <button vcl-button (tap)="metalist3.select(meta)">Select</button>
       Some HTML // {{item.name}}
       <span *ngIf="meta.selected"> // selected</span>
       <span *ngIf="meta.marked"> // marked</span>
     </div>
-  </vcl-metalist-item>
-</vcl-metalist>
+  </div>
+</div>
 <br>Current value: {{value1}}
 
 <br/>
 <h3>multi-select with ngModel:</h3>
-<vcl-metalist #metalist4 [(ngModel)]="value2" mode="multiple" [maxSelectableItems]="3">
-  <vcl-metalist-item #meta *ngFor="let item of items" [value]="item.value" [selected]="item.selected">
+<div vcl-metalist #metalist4 [(ngModel)]="value2" mode="multiple" [maxSelectableItems]="3">
+  <div vcl-metalist-item #meta=meta *ngFor="let item of items" [value]="item.value">
     <div>
       <button vcl-button (tap)="metalist4.select(meta)">Select</button>
       Some HTML // {{item.name}}
       <span *ngIf="meta.selected"> // selected</span>
       <span *ngIf="meta.marked"> // marked</span>
     </div>
-  </vcl-metalist-item>
-</vcl-metalist>
+  </div>
+</div>
 <br>Current value: {{value2}}
