--- a/demo/src/demos/toolbar/demo.component.html
+++ b/demo/src/demos/toolbar/demo.component.html
@@ -13,7 +13,7 @@ Multiple level toolbars can be provided using <code>ariaLevel</code> attribute. 
     <h1 class="vclToolbarTitle">App Name</h1>
   </a>
 
-  <nav  #nav1 type="horizontal">
+  <nav vcl-navigation #nav1 type="horizontal">
     <vcl-navitem label="Link 1" prepIcon="fa:home" [route]="['#']"></vcl-navitem>
     <vcl-navitem label="Link 2" prepIcon="fa:envelope" [route]="['#']"></vcl-navitem>
   </nav>
