--- a/demo/src/demos/input/demo.component.html
+++ b/demo/src/demos/input/demo.component.html
@@ -1,32 +1,18 @@
 <h3>Input</h3>
 <input vcl-input [(ngModel)]="data1" />
 <br>
-<b>Input 1 value:</b> {{data1}}
+<b>Input value:</b> {{data1}}
 
 <br>
 <br>
-<br>
-<h3>Input 2 (selectOnFocus)</h3>
-<input vcl-input [(ngModel)]="data2" selectOnFocus=true />
-<br>
-<b>Input 2 value:</b> {{data2}}
+<h3>Input (autoselect)</h3>
+<input vcl-input vcl-input-autoselect />
 
-<br>
-<br>
-<br>
-<h3>Input 3 (type="number")</h3>
-<input vcl-input [(ngModel)]="data3" type="number" />
-<br>
-<b>Input 3 typed value (number):</b> {{data3}}
-
-<br>
 <br>
 <br>
 <h3>Input (readonly)</h3>
 <input vcl-input value='readOnly' readonly=true />
-<br>
 
-<br>
 <br>
 <br>
 <h3>Input (disabled)</h3>
