--- a/src/ng-vcl/autocomplete/autocomplete.component.html
+++ b/src/ng-vcl/autocomplete/autocomplete.component.html
@@ -9,29 +9,29 @@
              [style.width]="popoverWidth$ | async"
              (mousedown)="$event.preventDefault()"
              >
-  <ul *ngIf="itemsVisible$ | async" class="vclDropdown vclNoBorder vclOpen" role="menu">
-    <ng-container *ngFor="let item of items$ | async; let idx = index">
-      <li *ngIf="item.type==='item'" 
+
+  <ng-container *ngIf="(items$ | async)?.length > 0">
+    <ul class="vclDropdown vclNoBorder vclOpen" role="menu">
+      <ng-container *ngFor="let item of items$ | async; let idx = index">
+        <li *ngIf="item.type==='item'" 
           class="vclDropdownItem"
           [class.vclHighlighted]="idx === highlightedItem"
           [class.vclDisabled]="disabled || item.disabled"
           role="menuitem"
           (click)="target.select(item)">
-        <div role="menuitem" class="vclDropdownItemLabel">{{item.label}}</div>
-        <div *ngIf="item.sublabel" class="vclDropdownItemSubLabel">{{item.sublabel}}</div>
-      </li>
-      <li *ngIf="item.type==='separator'" role="menuitem">
-        <div class="vclSeparator" role="separator"></div>
-      </li>
-      <li *ngIf="item.type==='header'" class="vclDropdownItemGroupHeader" role="menuitem">
-        <div class="vclDropdownItemGroupHeaderLabel">{{item.label}}</div>
-      </li>
-    </ng-container>
-  </ul>
-  <ng-container *ngIf="busyVisible$ | async">
-    <vcl-busy-indicator></vcl-busy-indicator>
+          <div role="menuitem" class="vclDropdownItemLabel">{{item.label}}</div>
+          <div *ngIf="item.sublabel" class="vclDropdownItemSubLabel">{{item.sublabel}}</div>
+        </li>
+        <li *ngIf="item.type==='separator'" role="menuitem">
+          <div class="vclSeparator" role="separator"></div>
+        </li>
+        <li *ngIf="item.type==='header'" class="vclDropdownItemGroupHeader" role="menuitem">
+          <div class="vclDropdownItemGroupHeaderLabel">{{item.label}}</div>
+        </li>
+      </ng-container>
+    </ul>
   </ng-container>
-  <ng-container *ngIf="contentVisible$ | async">
-    <ng-content select="[autocomplete-content]"></ng-content>
+  <ng-container *ngFor="let c of content$ | async">
+    <ng-container *ngTemplateOutlet="c.templateRef"></ng-container>
   </ng-container>
 </vcl-popover>
