button: add square button directive

--- a/demo/src/demos/button/demo.component.html
+++ b/demo/src/demos/button/demo.component.html
@@ -10,6 +10,8 @@
 <br><br>
 <button vcl-button (click)="someAction($event)" label="Flexed label button" flexLabel=true></button>
 <br><br>
+<button vcl-button icon="fa:bolt" title="Square Button" (click)="someAction($event)"></button>
+<br><br>
 <button vcl-button selectable (select)="someAction($event)">Selectable button</button>
 <br><br>
 <button vcl-button [selectable]="true" (select)="someAction($event)">Selectable button (preselected)</button>
