--- a/src/ng-vcl/select/select.component.html
+++ b/src/ng-vcl/select/select.component.html
@@ -17,8 +17,8 @@
       [disabled]="disabled"
       type="button"
       tabindex="-1"
-      class="vclTransparent vclSquare vclAppended"
-      [appIcon]="expanded ? expandedIcon : collapsedIcon"
+      class="vclTransparent vclAppended"
+      [icon]="expanded ? expandedIcon : collapsedIcon"
       (tap)="toggle()">
     </button>
   </div>
