--- a/src/ng-vcl/token/token.component.html
+++ b/src/ng-vcl/token/token.component.html
@@ -5,6 +5,6 @@
         class="vclTransparent"
         type="button" 
         title="Remove"
-        [appIcon]="icon"
+        [icon]="icon"
         (click)="onRemoveClick($event)">
 </button>
